--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "calculator"
-version = "1.8.2"
+version = "1.8.3"
 edition = "2021"
+license = "GPL3"
+repository = "https://github.com/BHznJNs/Calculator.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
