--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "calculator"
 version = "1.8.5"
 edition = "2021"
-license = "GPL3"
+license = "GPL-3.0"
 repository = "https://github.com/BHznJNs/Calculator.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.26.1"
